--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ repository               : "ruinov1st/ruinov1st.github.io" # academicpages/acade
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "https://ruinov1st.github.io/images/profile1.png"
+  avatar           : "https://ruinov1st.github.io/images/profile1.jpg"
   name             : "Shirui Wei"
   pronouns         : "she/her"  
-  bio              : "PhD student in Astronomy"
+  bio              : "A PhD student in Astronomy"
   location         : "Beijing, China"
   employer         : "National Astronomical Observatories, Chinese Academy of Sciences (NAOC)"
   uri              : "https://ruinov1st.github.io"
